--- a/links.html
+++ b/links.html
@@ -18,8 +18,12 @@
   </nav><br><br>
 
 <h1>chel-z online</h1>
-<h2></h2><br><br>
-<p></p>
+<h2>Links</h2><br><br>
+<p><a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
+<a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
+<a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
+<a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>&nbsp; &#9785; &nbsp;
+</p>
 
 </body>
 </html>
