fixed index.html and css style sheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>
-    <3 chel-z online <3</title>
+    chel-z online
+  </title>
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,19 +16,12 @@
   <nav class="site_nav">
     <ul>
       <li><a href="index.html">index</a></li>
-      <li><a href="animation.html">animation</a></li>
-      <li><a href="music.html">music</a></li>
-      <li><a href="memes.html">memes</a></li>
-      <li><a href="egirl_trash.html">e-girl trash</a></li>
-      <li><a href="demonic_scribbles.html">demonic scribbles</a></li>
+      <li><a href="links.html">links</a></li>
     </ul>
   </nav><br><br>
 
   <h1>chel-z online</h1>
-  <p>animation &nbsp; xXx &nbsp; music &nbsp; xXx &nbsp; memes &nbsp; xXx &nbsp; doodles</p><br><br><br>
-
-  <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;<a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;<a
-    href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;<a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>&nbsp; &#9785; &nbsp;<a href="mixtapes.html">youtube mixtapes</a>
+  <p>animation &nbsp;&nbsp; music &nbsp;&nbsp; digital doodles</p><br><br><br>
 
 </body>
 
