--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 </head>
 
 <body>
-
-  <nav class="site_nav">
-    <ul>
-      <li><a href="index.html">index</a></li>
-      <li><a href="links.html">links</a></li>
-    </ul>
-  </nav><br><br>
+<br>
 
   <h1>chel-z online</h1>
   <p>animation &nbsp;&nbsp; music &nbsp;&nbsp; digital doodles</p><br><br><br>
+  <h2>Links</h2><br><br>
+  <p>
+    <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
+    <a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
+    <a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
+    <a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>&nbsp; &#9785; &nbsp;
+  </p>
 
 </body>
 
