redesogned index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>
     chel-z online
   </title>
-      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -15,9 +15,9 @@
 <br>
 
   <h1>chel-z online</h1>
-  <p>animation &nbsp;&nbsp; music &nbsp;&nbsp; digital doodles</p><br><br><br>
-  <h2>Links</h2><br><br>
-  <p>
+  <p class="header_text">animation &nbsp; x &nbsp; music &nbsp; x &nbsp; digital doodles</p><br><br><br>
+  <h2>Links</h2>
+  <p class="link_text">
     <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
     <a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
     <a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
