testing new design

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     chel-z online
   </title>
       <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +18,12 @@
     <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
     <a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
     <a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
-    <a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>&nbsp; &#9785; &nbsp;
+    <a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>
   </p>
+
+<div class="footer">
+  <p class="footer_text">chel-z online 2022</p>
+</div>
 
 </body>
 
