--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
   <p class="header_text">animation &nbsp; x &nbsp; music &nbsp; x &nbsp; digital doodles</p><br><br><br>
   <h2>Links</h2>
   <p class="link_text">
+    <a href="https://www.instagram.com/alienbearstudios/" target="_blank">instagram</a>&nbsp; &#9785; &nbsp;
     <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
     <a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
     <a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
     <a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>
   </p>
 
+  <p class="ab_image"><img src="ab_trans.png"></p>
+
 <div class="footer">
-  <p class="footer_text">chel-z online 2022</p>
+  <p class="footertext_right">chel-z online 2022</p>
 </div>
 
 </body>
