fully updated index.html

--- a/index.html
+++ b/index.html
@@ -2,31 +2,55 @@
 <html lang="en">
 
 <head>
-  <title>
-    chel-z online
-  </title>
-      <link rel="stylesheet" href="style.css">
+    <title>
+        chel-z online
+    </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="smonkinc.ico">
 </head>
 
 <body>
-<br>
+    <br>
 
-  <h1>chel-z online</h1>
-  <p class="header_text">animation &nbsp; x &nbsp; music &nbsp; x &nbsp; digital doodles</p><br><br><br>
-  <h2>Links</h2>
-  <p class="link_text">
-    <a href="https://www.instagram.com/alienbearstudios/" target="_blank">instagram</a>&nbsp; &#9785; &nbsp;
-    <a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">youtube</a>&nbsp; &#9785; &nbsp;
-    <a href="https://vimeo.com/alienbearstudios" target="_blank">vimeo</a>&nbsp; &#9785; &nbsp;
-    <a href="https://soundcloud.com/chelzonline" target="_blank">soundcloud</a>&nbsp; &#9785; &nbsp;
-    <a href="https://www.patreon.com/alienbearstudios" target="_blank">patreon</a>
-  </p>
+    <h1>chel-z online</h1>
+    <p class="header_text">animation &nbsp; &#9785; &nbsp; music &nbsp; &#9785; &nbsp; digital doodles</p>
 
-  <p class="ab_image"><img src="ab_trans.png"></p>
+    <h2>Links</h2>
+    <table style="width:100%">
+        <tr>
+            <th class="linkbox"><a href="https://www.instagram.com/alienbearstudios/" target="_blank">
+                    <img class="link_image" src="clearphone_trans_px.png" width="45px" height="120px" alt="instagram">
+                    <div>instagram</div>
+                </a></th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <th class="linkbox"><a href="https://www.tiktok.com/@___scam___likely___" target="_blank">
+                    <img class="link_image" src="gameboy_trans_px.png" width="100px" height="100px" alt="tiktok">
+                    <div>tiktok</div>
+                </a></th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <th class="linkbox"><a href="https://www.youtube.com/channel/UCeLE1RIqJG8tqJD4Z8nrLRQ" target="_blank">
+                    <img class="link_image" src="tvpink_trans_px.png" width="100px" height="100px" alt="youtube">
+                    <div>youtube</div>
+                </a></th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <th class="linkbox"><a href="https://vimeo.com/alienbearstudios" target="_blank">
+                    <img class="link_image" src="pcwin95_trans_px.png" width="110px" height="90px" alt="vimeo">
+                    <div>vimeo</div>
+                </a></th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <th class="linkbox"><a href="https://soundcloud.com/chelzonline" target="_blank">
+                    <img class="link_image" src="mp3_px.png" width="100px" height="100px" alt="soundcloud">
+                    <div>soundcloud</div>
+                </a></th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <th class="linkbox"><a href="https://www.patreon.com/alienbearstudios" target="_blank">
+                    <img class="link_image" src="fairy_px.png" width="70px" height="100px" alt="patreon">
+                    <div>patreon</div>
+                </a></th>
+        </tr>
+    </table>
 
-<div class="footer">
-  <p class="footertext_right">chel-z online 2022</p>
-</div>
+    <p class="ab_image"><img src="ab_trans.png"></p>
+
+    <div class="footer">
+        <image class="icon" src="smonkinc.png" width="53px" height="53px">
+            <p class="footertext_right">chel-z online 2022</p>
+    </div>
 
 </body>
 
